--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
-    height: 100vh;  /* Setinggi viewport */
-    justify-content: center;  /* Pusatkan secara horizontal */
-    align-items: center;      /* Pusatkan secara vertikal */
+    height: 100vh; 
+    justify-content: center;  
+    align-items: center;      
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
